plugins {
    id 'org.springframework.boot' version '3.3.4'
    id 'io.spring.dependency-management' version '1.1.4'
    id 'java'
}

ext['jakarta-servlet.version'] = '6.0.0'
ext['snakeyaml.version'] = '2.0'

group = 'com.reyesemf.gm.article'
version = '0.0.1-SNAPSHOT'

sourceCompatibility = 17
targetCompatibility = 17

repositories {
    mavenCentral()
}

bootRun {
    mainClass = 'com.reyesemf.gm.article.Application'
}

dependencies {

    implementation('org.apache.commons:commons-collections4:4.4')
    implementation('commons-io:commons-io:2.14.0')
    implementation('org.apache.logging.log4j:log4j-api:2.17.2')
    implementation('org.apache.logging.log4j:log4j-to-slf4j:2.17.2')

    // Spring
    implementation('org.springframework.boot:spring-boot-starter-data-jpa')
    implementation('org.springframework.boot:spring-boot-starter-cache')
    implementation('org.springframework.boot:spring-boot-starter-jetty')
    implementation('org.springframework:spring-messaging')
    implementation('org.springframework.boot:spring-boot-starter-validation')
    implementation('org.springframework.boot:spring-boot-starter-web') {
        exclude module: 'spring-boot-starter-tomcat'
    }

    //Others
    implementation('org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0')
    implementation('mysql:mysql-connector-java:8.0.32')
    implementation('net.minidev:accessors-smart:2.4.9')
    implementation('net.minidev:json-smart:2.4.10')
    implementation('com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.16.0')
    implementation('com.fasterxml.jackson.datatype:jackson-datatype-hibernate6:2.16.0')
    implementation('org.apache.commons:commons-configuration2:2.10.1') {
        exclude(group: 'org.apache.commons', module: 'commons-text')
    }
    implementation('com.fasterxml.jackson.module:jackson-module-afterburner:2.16.0')

    implementation(group: 'com.github.ben-manes.caffeine', name: 'caffeine', version: '2.8.6')
    implementation('org.hibernate:hibernate-jcache:6.2.0.Final')
    implementation('org.ehcache:ehcache:3.10.8')

    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    //Tests
    testImplementation('org.springframework.boot:spring-boot-starter-test') {
        exclude group: 'junit', module: 'junit'
    }
    testImplementation('com.h2database:h2:2.1.210')
    runtimeOnly('com.h2database:h2:2.1.210')
    testImplementation('org.junit.jupiter:junit-jupiter-api:5.9.2')
    testImplementation('org.junit.jupiter:junit-jupiter-engine:5.9.2')
    testImplementation('org.junit.platform:junit-platform-launcher:1.9.2')
    testImplementation('org.junit.platform:junit-platform-engine:1.9.2')
    testImplementation('org.junit.platform:junit-platform-runner:1.9.2')
    testImplementation('org.junit.jupiter:junit-jupiter-params:5.9.2')
    testImplementation('org.mockito:mockito-junit-jupiter:2.21.0')
    testImplementation group: 'com.openpojo', name: 'openpojo', version: '0.9.1'
    testImplementation 'com.tngtech.archunit:archunit-junit4:0.23.1'
    testImplementation 'com.github.javaparser:javaparser-core:3.23.1'

    // Jetty test compatibility
    testImplementation('jakarta.servlet:jakarta.servlet-api:6.0.0')
    testImplementation('org.eclipse.jetty:jetty-server')
    implementation 'com.github.slugify:slugify:3.0.6'
    implementation 'commons-validator:commons-validator:1.7'
}

test {
    // Fix InaccessibleObjectException ArchUnit
    jvmArgs("--add-opens", "java.base/java.time=ALL-UNNAMED")

    // Enable JUnit 5 (Gradle 4.6+).
    useJUnitPlatform()

    // Always run tests, even when nothing changed.
    dependsOn 'cleanTest'

    // Show test results.
    testLogging {
        events "passed", "skipped", "failed"
    }

}
